--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
     "node": ">=10",
     "npm": ">=6"
   },
+  "main": "dist/bundle.js",
+  "unpkg": "dist/bundle.js",
   "scripts": {
     "clean": "rimraf dist/*.*",
     "start": "webpack-dev-server --color --mode development --http --env.PORT=3333",
     "dev": "yarn start",
     "serve": "yarn start",
-    "build-es5": "rollup -c rollup.config.js --environment ES5",
-    "build-es6": "rollup -c rollup.config.js --environment ES6",
-    "build": "yarn clean && yarn build-es5 && yarn build-es6",
+    "build-es5": "rollup -c rollup.config.js",
+    "build-es6": "rollup -c rollup.config.js",
+    "build": "yarn clean && yarn build-es6",
     "build:watch": "rollup -c rollup.config.js --environment ES5 -w",
     "webpack-build": "webpack --mode production",
     "validate": "webpack-dev-server --color --mode development --env.VALIDATE=1  --env.PORT=4444",
