--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "name": "react-slide-toggle-hooks",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "engines": {
     "node": ">=10",
     "npm": ">=6"
   },
-  "main": "dist/bundle.js",
-  "unpkg": "dist/bundle.js",
+  "main": "dist/bundle.min.js",
+  "unpkg": "dist/bundle.min.js",
   "scripts": {
     "clean": "rimraf dist/*.*",
     "start": "webpack-dev-server --color --mode development --http --env.PORT=3333",
     "dev": "yarn start",
     "serve": "yarn start",
-    "build-es5": "rollup -c rollup.config.js",
-    "build-es6": "rollup -c rollup.config.js",
-    "build": "yarn clean && yarn build-es6",
+    "build": "yarn clean && rollup --config",
     "build:watch": "rollup -c rollup.config.js --environment ES5 -w",
     "webpack-build": "webpack --mode production",
     "validate": "webpack-dev-server --color --mode development --env.VALIDATE=1  --env.PORT=4444",
@@ -96,6 +94,7 @@
     "rollup-plugin-url": "^3.0.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "terser": "^5.3.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.42.0",
